[package]
name = "bible-cli"
version = "0.1.0"
authors = ["Mirko Hecky <git@hecky.eu>"]
edition = "2018"

[dependencies]
bible-rs = { git = "https://github.com/strongs-de/bible-rs", version = "0.1.0" }
quick-xml = "0.17.2"
regex = "1"
rayon = "1.3.0"
clap = { version = "2.33.0", features = ["yaml"] }
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
quick-error = "1.2.3"
flexi_logger = "0.14"
log = "0.4"
actix-web = "2"
actix-rt = "1"
json = "0.12"
serde_json = "1.0"
glob = "0.3.0"