[package]
name = "bible-cli"
version = "0.1.0"
authors = ["Mirko Hecky <git@hecky.eu>"]
edition = "2018"

[dependencies]
quick-xml = "0.22.0"
regex = "1"
rayon = "1.3.0"
clap = { version = "3.1.8", features = ["cargo"] }
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
quick-error = "2.0.1"
log = "0.4"
actix-web = "4.0.1"
actix-rt = "2.7.0"
json = "0.12"
serde_json = "1.0"
glob = "0.3.0"
log4rs = "1.0.0"
serde_yaml = "0.8.23"