[package]
name = "bible"
version = "0.2.0"
authors = ["Mirko Hecky <git@hecky.eu>"]
edition = "2018"

[lib]
name = "bible"
path = "src/lib.rs"

[[bin]]
name = "bible-cli"
path = "src/main.rs"
required-features = ["binaries"]

[dependencies]
quick-xml = "0.22.0"
regex = "1"
rayon = "1.3.0"
clap = { version = "3.1.8", features = ["cargo"], optional = true }
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", optional = true }
actix-web = { version = "4.0.1", optional = true }
actix-rt = { version = "2.7.0", optional = true }
json = "0.12"
serde_json = "1.0"
glob = "0.3.0"
log4rs = { version = "1.0.0", optional = true }
serde_yaml = "0.8.23"

[features]
binaries = ["clap", "log", "actix-web", "actix-rt", "log4rs"]